# integration-mariadb

./: Dockerfile  Dockerfile.local  Makefile  README.md  docker-compose.yml  go.mod  go.sum  main.go  my.cnf  passwd.minimal
.github/workflows/: build-and-test.yml
manifests/: mariadb-galera.yaml
mariadb/: Cargo.toml  Dockerfile  Makefile
mariadb/src/: main.rs
rabbitmq/: Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum
rabbitmq/it/: main.go
